@@ -1,3 +1,4 @@
+13 Jul 2011 Externalized TN3270 logo cnsllogo.h - PGorlinsky
 10 Jul 2011 Relax AUTOMOUNT CCW restrictions - Fish
 24 Apr 2011 Fix IEHINITT blank tape BSR bug - Fish
 23 Jun 2011 Fix 0671 FBA blocks per access position (bpp) - paoloG by Fish
